ship rotates from input and travels directionally

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +175,10 @@
     "\n",
     "\n",
     "class Velocity:\n",
-    "    def __init__(self, vx, vy):\n",
+    "    def __init__(self, vx, vy, is_directional: bool = False):\n",
     "        self.vx = vx\n",
     "        self.vy = vy\n",
+    "        self.is_directional = is_directional\n",
     "\n",
     "\n",
     "# state\n",
@@ -195,7 +196,9 @@
     "# graphics\n",
     "class Shape:\n",
     "    def __init__(self, points: List[Tuple[float, float]], center=0):\n",
-    "        self.points = points\n",
+    "        self.points_source = points\n",
+    "        # use this to transform source points for rendering\n",
+    "        self.points_render = points\n",
     "        self.center = center\n"
    ]
   },
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +422,7 @@
     "        int(RENDER_CONTEXT.WIDTH * 0.5), int(RENDER_CONTEXT.HEIGHT * 0.5)\n",
     "    )\n",
     "    ship_rotation = Rotation(0)\n",
-    "    ship_velocity = Velocity(0, 0)\n",
+    "    ship_velocity = Velocity(0, 0, True)\n",
     "    ship_health = Health(SHIP_HEALTH)\n",
     "    ship_points = generate_ship(SHIP_SIZE)\n",
     "    ship_shape = Shape(ship_points)\n",
@@ -445,6 +448,7 @@
     "    asteroid_velocity = Velocity(\n",
     "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
     "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
+    "        False\n",
     "    )\n",
     "    asteroid_health = Health(ASTEROID_HEALTH)\n",
     "    asteroid_points = generate_asteroid(\n",
@@ -476,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,23 +557,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PositioningSystem(SystemABC):\n",
+    "    def _forward_position(\n",
+    "        self, x, y, angle_degrees, forward_velocity\n",
+    "    ) -> Tuple[float, float]:\n",
+    "        \"\"\"Calculate the forward position of an entity\"\"\"\n",
+    "        # Convert angle from degrees to radians\n",
+    "        angle_radians = math.radians(angle_degrees)\n",
+    "\n",
+    "        # Calculate the change in x and y in the forward direction\n",
+    "        dx = forward_velocity * math.cos(angle_radians)\n",
+    "        dy = forward_velocity * math.sin(angle_radians)\n",
+    "\n",
+    "        # Update from the current position\n",
+    "        dir_x = x + dx\n",
+    "        dir_y = y + dy\n",
+    "\n",
+    "        return dir_x, dir_y\n",
+    "\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"\n",
     "        Update the position of entities with a velocity component\n",
     "        - with screen wrapping\n",
     "        \"\"\"\n",
     "        super().update(cm, **kwargs)\n",
-    "        entities = cm.get_entities_with_all_components([Position, Velocity])\n",
+    "        entities = cm.get_entities_with_all_components(\n",
+    "            [Shape, Position, Rotation, Velocity]\n",
+    "        )\n",
     "        for entity in entities:\n",
-    "            velocity = cm.get_component(entity, Velocity)\n",
     "            position = cm.get_component(entity, Position)\n",
-    "            position.x = (position.x + velocity.vx) % RENDER_CONTEXT.WIDTH\n",
-    "            position.y = (position.y + velocity.vy) % RENDER_CONTEXT.HEIGHT\n",
+    "            velocity = cm.get_component(entity, Velocity)\n",
+    "            # Update position based on velocity and rotation if necessary\n",
+    "            if not velocity.is_directional:\n",
+    "                position.x += velocity.vx\n",
+    "                position.y += velocity.vy\n",
+    "            else:\n",
+    "                angle = cm.get_component(entity, Rotation).angle\n",
+    "                forward_x, forward_y = self._forward_position(\n",
+    "                    position.x, position.y, angle, 1\n",
+    "                )\n",
+    "                position.x = forward_x\n",
+    "                position.y = forward_y\n",
+    "\n",
+    "            # apply screen wrapping\n",
+    "            position.x %= RENDER_CONTEXT.WIDTH\n",
+    "            position.y %= RENDER_CONTEXT.HEIGHT\n",
     "\n",
     "\n",
     "class RotationalSystem(SystemABC):\n",
@@ -590,12 +626,12 @@
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"Rotate entities with a rotation component\"\"\"\n",
     "        super().update(cm, **kwargs)\n",
-    "        entities = cm.get_entities_with_all_components([Rotation, Shape])\n",
+    "        entities = cm.get_entities_with_all_components([Shape, Rotation])\n",
     "        for entity in entities:\n",
     "            rotation = cm.get_component(entity, Rotation)\n",
     "            shape = cm.get_component(entity, Shape)\n",
-    "            rotated_shape = RotationalSystem._rotatePoints(shape.points, rotation.angle)\n",
-    "            shape.points = rotated_shape\n"
+    "            rotated_shape = RotationalSystem._rotatePoints(shape.points_source, rotation.angle)\n",
+    "            shape.points_render = rotated_shape\n"
    ]
   },
   {
@@ -608,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +668,7 @@
     "            pygame.draw.polygon(\n",
     "                self.screen,\n",
     "                (255, 255, 255),\n",
-    "                [(x + px, y + py) for px, py in shape.points],\n",
+    "                [(x + px, y + py) for px, py in shape.points_render],\n",
     "                1,\n",
     "            )"
    ]
@@ -647,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,19 +732,34 @@
     "    # Create asteroid\n",
     "    spawn_asteroids(5, component_manager)\n",
     "\n",
+    "    \"\"\"DEBUG\"\"\"\n",
+    "    is_super_hot = False\n",
+    "    text_blit_system_debug_player_rotation = TextBlitSystem(\n",
+    "        context_sys.screen, (280, 410)\n",
+    "    )\n",
+    "    player_ship = component_manager.get_entities_with_all_components(\n",
+    "        [Shape, Input, Rotation]\n",
+    "    )[0]\n",
+    "    player_rotation = component_manager.get_component(player_ship, Rotation)\n",
+    "    \"\"\"DEBUG\"\"\"\n",
+    "\n",
     "    # Main game loop\n",
     "    while True:\n",
     "        try:\n",
     "            # Event Handling\n",
     "            frame_events = pygame.event.get()\n",
-    "            if len(frame_events) == 0:\n",
-    "                continue\n",
+    "            # if super hot = True only update tick when there's an event\n",
+    "            if is_super_hot:\n",
+    "                if len(frame_events) == 0:\n",
+    "                    continue\n",
     "            for event in frame_events:\n",
     "                if event.type == pygame.QUIT:\n",
     "                    on_exit()\n",
     "                elif event.type == pygame.KEYUP:\n",
     "                    if event.key == pygame.K_ESCAPE:\n",
     "                        on_exit()\n",
+    "                    elif event.key == pygame.K_SPACE:\n",
+    "                        is_super_hot = not is_super_hot\n",
     "                # check if the event a keyboard or mouse event\n",
     "                if event.type in (\n",
     "                    pygame.KEYDOWN,\n",
@@ -725,8 +776,16 @@
     "            # Draw shapes\n",
     "            shape_draw_system.update(component_manager)\n",
     "            # Blit text\n",
-    "            text_blit_system_event.update(component_manager, message=f\"Event: {frame_events}\")\n",
-    "            text_blit_system_fps.update(component_manager, message=f\"FPS: {context_sys.clock.get_fps():.2f}\")\n",
+    "            text_blit_system_event.update(\n",
+    "                component_manager, message=f\"Event: {frame_events}\"\n",
+    "            )\n",
+    "            text_blit_system_fps.update(\n",
+    "                component_manager, message=f\"FPS: {context_sys.clock.get_fps():.2f}\"\n",
+    "            )\n",
+    "            text_blit_system_debug_player_rotation.update(\n",
+    "                component_manager,\n",
+    "                message=f\"Player rotation: {player_rotation.angle:.2f}\",\n",
+    "            )\n",
     "            # Update display\n",
     "            pygame.display.update()\n",
     "            # End frame tick\n",
