simplified x,y to Vector2 tuple

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,10 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "Vector2D = namedtuple(\"Vector2D\", [\"x\", \"y\"])\n",
+    "\n",
     "# Create component classes\n",
     "# These classes should ONLY contain data, NO METHODS\n",
     "\n",
@@ -162,44 +166,68 @@
     "        pass\n",
     "\n",
     "\n",
-    "# transforms\n",
-    "class Position:\n",
-    "    def __init__(self, x, y):\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
+    "# entity category\n",
+    "class Player:\n",
+    "    def __init__self(self):\n",
+    "        pass\n",
     "\n",
+    "\n",
+    "class Asteroid:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "# transforms\n",
+    "class Transform:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        center: Vector2D = Vector2D(0, 0),\n",
+    "        # default forward direction is up ^\n",
+    "        forward_dir: Vector2D = Vector2D(0, 1),\n",
+    "    ):\n",
+    "        \"\"\"transform container for center and forward direction\"\"\"\n",
+    "        self.center = center\n",
+    "        self.forward_dir = forward_dir\n",
+    "\n",
+    "\n",
+    "class Position:\n",
+    "    def __init__(self, position:Vector2D = Vector2D(0,0)):\n",
+    "        self.position = position\n",
     "\n",
     "class Rotation:\n",
-    "    def __init__(self, angle):\n",
+    "    def __init__(self, angle:float):\n",
     "        self.angle = angle\n",
     "\n",
     "\n",
     "class Velocity:\n",
-    "    def __init__(self, vx, vy, is_directional: bool = False):\n",
+    "    def __init__(self, vx:float, vy:float, magnitude:float=1):\n",
+    "        \"\"\"velocity == normalized input(vx,vy) * magnitude\"\"\"\n",
     "        self.vx = vx\n",
     "        self.vy = vy\n",
-    "        self.is_directional = is_directional\n",
+    "        self.magnitude = magnitude\n",
     "\n",
     "\n",
     "# state\n",
     "class Health:\n",
-    "    def __init__(self, health):\n",
+    "    def __init__(self, health:int):\n",
     "        self.health = health\n",
     "\n",
     "\n",
     "# collision volume\n",
     "class Collider:\n",
-    "    def __init__(self, radius):\n",
+    "    def __init__(self, radius:float):\n",
     "        self.radius = radius\n",
     "\n",
     "\n",
     "# graphics\n",
     "class Shape:\n",
-    "    def __init__(self, points: List[Tuple[float, float]], center=0):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        points: List[Tuple[float, float]],\n",
+    "    ):\n",
     "        self.points_source = points\n",
     "        # use this to transform source points for rendering\n",
-    "        self.points_render = points\n",
-    "        self.center = center\n"
+    "        self.points_render = points\n"
    ]
   },
   {
@@ -216,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,17 +445,21 @@
     "def spawn_ship(component_manager: ComponentManager) -> None:\n",
     "    \"spawn a ship at the center of the screen\"\n",
     "    ship = Entity(name=\"ship\")\n",
+    "    ship_game_object = Player()\n",
     "    ship_input = Input()\n",
+    "    ship_transform = Transform()\n",
     "    ship_position = Position(\n",
-    "        int(RENDER_CONTEXT.WIDTH * 0.5), int(RENDER_CONTEXT.HEIGHT * 0.5)\n",
+    "        Vector2D(int(RENDER_CONTEXT.WIDTH * 0.5), int(RENDER_CONTEXT.HEIGHT * 0.5))\n",
     "    )\n",
     "    ship_rotation = Rotation(0)\n",
-    "    ship_velocity = Velocity(0, 0, True)\n",
+    "    ship_velocity = Velocity(0, 0, 0)\n",
     "    ship_health = Health(SHIP_HEALTH)\n",
     "    ship_points = generate_ship(SHIP_SIZE)\n",
     "    ship_shape = Shape(ship_points)\n",
     "\n",
+    "    component_manager.add_component(ship, ship_game_object)\n",
     "    component_manager.add_component(ship, ship_input)\n",
+    "    component_manager.add_component(ship, ship_transform)\n",
     "    component_manager.add_component(ship, ship_position)\n",
     "    component_manager.add_component(ship, ship_rotation)\n",
     "    component_manager.add_component(ship, ship_velocity)\n",
@@ -438,17 +470,19 @@
     "def spawn_asteroid(component_manager: ComponentManager) -> None:\n",
     "    \"spawn an asteroid at a random positions\"\n",
     "    asteroid = Entity(name=\"asteroid\")\n",
+    "    asteroid_game_object = Asteroid()\n",
+    "    asteroid_transform = Transform()\n",
     "    asteroid_position = Position(\n",
-    "        random.randint(0, RENDER_CONTEXT.WIDTH),\n",
-    "        random.randint(0, RENDER_CONTEXT.HEIGHT),\n",
+    "        Vector2D(\n",
+    "            random.randint(0, RENDER_CONTEXT.WIDTH),\n",
+    "            random.randint(0, RENDER_CONTEXT.HEIGHT),\n",
+    "        )\n",
     "    )\n",
-    "    asteroid_rotation = Rotation(\n",
-    "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED)\n",
-    "    )\n",
+    "    asteroid_rotation = Rotation(random.randint(0, 359))\n",
     "    asteroid_velocity = Velocity(\n",
     "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
     "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
-    "        False\n",
+    "        1,\n",
     "    )\n",
     "    asteroid_health = Health(ASTEROID_HEALTH)\n",
     "    asteroid_points = generate_asteroid(\n",
@@ -456,6 +490,8 @@
     "    )\n",
     "    asteroid_shape = Shape(asteroid_points)\n",
     "\n",
+    "    component_manager.add_component(asteroid, asteroid_game_object)\n",
+    "    component_manager.add_component(asteroid, asteroid_transform)\n",
     "    component_manager.add_component(asteroid, asteroid_position)\n",
     "    component_manager.add_component(asteroid, asteroid_rotation)\n",
     "    component_manager.add_component(asteroid, asteroid_velocity)\n",
@@ -480,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,10 +555,10 @@
     "    def _on_keydown(self, entity, event, cm) -> None:\n",
     "        if event.key == pygame.K_UP:\n",
     "            velocity = cm.get_component(entity, Velocity)\n",
-    "            velocity.vy = -5\n",
+    "            velocity.magnitude += 1\n",
     "        elif event.key == pygame.K_DOWN:\n",
     "            velocity = cm.get_component(entity, Velocity)\n",
-    "            velocity.vy = 5\n",
+    "            velocity.magnitude -= 1\n",
     "        if event.key == pygame.K_RIGHT:\n",
     "            rotation = cm.get_component(entity, Rotation)\n",
     "            rotation.angle = (rotation.angle + 5) % 360\n",
@@ -532,11 +568,11 @@
     "\n",
     "    def _on_keyup(self, entity, event, cm) -> None:\n",
     "        velocity = cm.get_component(entity, Velocity)\n",
-    "        velocity.vy = 0\n",
     "\n",
     "    def update(self, cm: ComponentManager, event: pygame.event.Event, **kwargs) -> None:\n",
     "        \"\"\"Handle input events for entities with an input component\"\"\"\n",
     "        super().update(cm, **kwargs)\n",
+    "        # early exit if no event\n",
     "        if event is None:\n",
     "            return\n",
     "        entities = cm.get_entities_with_all_components([Input, Velocity, Rotation])\n",
@@ -557,27 +593,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 522,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PositioningSystem(SystemABC):\n",
+    "    @staticmethod\n",
+    "    def _screen_wrap(position: Vector2D) -> Vector2D:\n",
+    "        \"\"\"Wrap a position to the screen\"\"\"\n",
+    "        return Vector2D(\n",
+    "            position.x % RENDER_CONTEXT.WIDTH, position.y % RENDER_CONTEXT.HEIGHT\n",
+    "        )\n",
+    "\n",
+    "    @staticmethod\n",
     "    def _forward_position(\n",
-    "        self, x, y, angle_degrees, forward_velocity\n",
-    "    ) -> Tuple[float, float]:\n",
+    "        position: Vector2D, angle_degrees: float, magnitude: float\n",
+    "    ) -> Vector2D:\n",
     "        \"\"\"Calculate the forward position of an entity\"\"\"\n",
     "        # Convert angle from degrees to radians\n",
     "        angle_radians = math.radians(angle_degrees)\n",
     "\n",
     "        # Calculate the change in x and y in the forward direction\n",
-    "        dx = forward_velocity * math.cos(angle_radians)\n",
-    "        dy = forward_velocity * math.sin(angle_radians)\n",
+    "        dx = magnitude * math.cos(angle_radians)\n",
+    "        dy = magnitude * math.sin(angle_radians)\n",
     "\n",
-    "        # Update from the current position\n",
-    "        dir_x = x + dx\n",
-    "        dir_y = y + dy\n",
+    "        # Calculate the new position given radian and magnitude\n",
+    "        dir_x = position.x + dx\n",
+    "        dir_y = position.y + dy\n",
     "\n",
-    "        return dir_x, dir_y\n",
+    "        return Vector2D(dir_x, dir_y)\n",
     "\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"\n",
@@ -589,23 +633,16 @@
     "            [Shape, Position, Rotation, Velocity]\n",
     "        )\n",
     "        for entity in entities:\n",
-    "            position = cm.get_component(entity, Position)\n",
-    "            velocity = cm.get_component(entity, Velocity)\n",
+    "            p = cm.get_component(entity, Position)\n",
+    "            magnitude = cm.get_component(entity, Velocity).magnitude\n",
     "            # Update position based on velocity and rotation if necessary\n",
-    "            if not velocity.is_directional:\n",
-    "                position.x += velocity.vx\n",
-    "                position.y += velocity.vy\n",
-    "            else:\n",
-    "                angle = cm.get_component(entity, Rotation).angle\n",
-    "                forward_x, forward_y = self._forward_position(\n",
-    "                    position.x, position.y, angle, 1\n",
-    "                )\n",
-    "                position.x = forward_x\n",
-    "                position.y = forward_y\n",
-    "\n",
-    "            # apply screen wrapping\n",
-    "            position.x %= RENDER_CONTEXT.WIDTH\n",
-    "            position.y %= RENDER_CONTEXT.HEIGHT\n",
+    "            angle = cm.get_component(entity, Rotation).angle\n",
+    "            # calculate forward position\n",
+    "            forward_position = PositioningSystem._forward_position(\n",
+    "                p.position, angle, magnitude\n",
+    "            )\n",
+    "            # update to forward position (with screen wrapping)\n",
+    "            p.position = PositioningSystem._screen_wrap(forward_position)\n",
     "\n",
     "\n",
     "class RotationalSystem(SystemABC):\n",
@@ -630,7 +667,9 @@
     "        for entity in entities:\n",
     "            rotation = cm.get_component(entity, Rotation)\n",
     "            shape = cm.get_component(entity, Shape)\n",
-    "            rotated_shape = RotationalSystem._rotatePoints(shape.points_source, rotation.angle)\n",
+    "            rotated_shape = RotationalSystem._rotatePoints(\n",
+    "                shape.points_source, rotation.angle\n",
+    "            )\n",
     "            shape.points_render = rotated_shape\n"
    ]
   },
@@ -644,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 523,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,8 +701,8 @@
     "        # rotated_image = pygame.transform.rotate(self.image, self.rotation)\n",
     "        # Render all entities with a position and points component\n",
     "        for entity in entities:\n",
-    "            position = cm.get_component(entity, Position)\n",
-    "            x, y = position.x, position.y\n",
+    "            p = cm.get_component(entity, Position)\n",
+    "            x, y = p.position\n",
     "            shape = cm.get_component(entity, Shape)\n",
     "            pygame.draw.polygon(\n",
     "                self.screen,\n",
@@ -683,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 524,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 525,
    "metadata": {},
    "outputs": [],
    "source": [
