adding ShapeABC(ABC) to handle point rotation

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,22 +142,22 @@
    "metadata": {},
    "source": [
     "##### **Component Base**\n",
+    "These classes should ONLY contain DATA => NO FUNCTIONS\n",
     "- `Display`     : Position, Shape\n",
     "- `Interaction` : Collider, Health"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import namedtuple\n",
     "\n",
+    "# common data types\n",
     "Vector2D = namedtuple(\"Vector2D\", [\"x\", \"y\"])\n",
-    "\n",
-    "# Create component classes\n",
-    "# These classes should ONLY contain data, NO METHODS\n",
+    "KeyFrame = namedtuple(\"KeyFrame\", [\"tick\", \"value\"])\n",
     "\n",
     "\n",
     "# input handler\n",
@@ -177,30 +177,43 @@
     "        pass\n",
     "\n",
     "\n",
+    "class HasKeyFrame:\n",
+    "    def __init__(self, key_frame: KeyFrame):\n",
+    "        \"\"\"\n",
+    "         KeyFrame\n",
+    "        - tick  == current angle\n",
+    "        - value == rotation speed\n",
+    "        \"\"\"\n",
+    "        self.key_frame = key_frame\n",
+    "\n",
+    "\n",
     "# transforms\n",
     "class Transform:\n",
     "    def __init__(\n",
     "        self,\n",
     "        center: Vector2D = Vector2D(0, 0),\n",
     "        # default forward direction is up ^\n",
-    "        forward_dir: Vector2D = Vector2D(0, 1),\n",
+    "        rotation: float = 0,\n",
+    "        scale: float = 1.0,\n",
     "    ):\n",
     "        \"\"\"transform container for center and forward direction\"\"\"\n",
     "        self.center = center\n",
-    "        self.forward_dir = forward_dir\n",
+    "        self.rotation = rotation\n",
+    "        self.scale = scale\n",
     "\n",
     "\n",
     "class Position:\n",
-    "    def __init__(self, position:Vector2D = Vector2D(0,0)):\n",
+    "    def __init__(self, position: Vector2D = Vector2D(0, 0)):\n",
     "        self.position = position\n",
     "\n",
+    "\n",
     "class Rotation:\n",
-    "    def __init__(self, angle:float):\n",
+    "    def __init__(self, angle: float):\n",
     "        self.angle = angle\n",
     "\n",
     "\n",
     "class Velocity:\n",
-    "    def __init__(self, vx:float, vy:float, magnitude:float=1):\n",
+    "    def __init__(self, vx: float, vy: float, magnitude: float = 1):\n",
     "        \"\"\"velocity == normalized input(vx,vy) * magnitude\"\"\"\n",
     "        self.vx = vx\n",
     "        self.vy = vy\n",
@@ -209,13 +222,13 @@
     "\n",
     "# state\n",
     "class Health:\n",
-    "    def __init__(self, health:int):\n",
+    "    def __init__(self, health: int):\n",
     "        self.health = health\n",
     "\n",
     "\n",
     "# collision volume\n",
     "class Collider:\n",
-    "    def __init__(self, radius:float):\n",
+    "    def __init__(self, radius: float):\n",
     "        self.radius = radius\n",
     "\n",
     "\n",
@@ -244,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +452,8 @@
     "ASTEROID_HEALTH = 100\n",
     "ASTEROID_SIZE = 100\n",
     "ASTEROID_VERTICES = 10\n",
-    "ASTEROID_MAX_SPEED = 2\n",
+    "ASTEROID_MAX_SPEED_POSITION = 2\n",
+    "ASTEROID_MAX_SPEED_ROTATION = 2\n",
     "\n",
     "\n",
     "def spawn_ship(component_manager: ComponentManager) -> None:\n",
@@ -471,6 +485,11 @@
     "    \"spawn an asteroid at a random positions\"\n",
     "    asteroid = Entity(name=\"asteroid\")\n",
     "    asteroid_game_object = Asteroid()\n",
+    "    angle_degree = random.randint(0, 359)\n",
+    "    rotation_speed = random.randint(\n",
+    "        -ASTEROID_MAX_SPEED_ROTATION, ASTEROID_MAX_SPEED_ROTATION\n",
+    "    )\n",
+    "    asteroid_has_key_frame = HasKeyFrame(KeyFrame(angle_degree, rotation_speed))\n",
     "    asteroid_transform = Transform()\n",
     "    asteroid_position = Position(\n",
     "        Vector2D(\n",
@@ -480,8 +499,8 @@
     "    )\n",
     "    asteroid_rotation = Rotation(random.randint(0, 359))\n",
     "    asteroid_velocity = Velocity(\n",
-    "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
-    "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
+    "        random.randint(-ASTEROID_MAX_SPEED_POSITION, ASTEROID_MAX_SPEED_POSITION),\n",
+    "        random.randint(-ASTEROID_MAX_SPEED_POSITION, ASTEROID_MAX_SPEED_POSITION),\n",
     "        1,\n",
     "    )\n",
     "    asteroid_health = Health(ASTEROID_HEALTH)\n",
@@ -491,6 +510,7 @@
     "    asteroid_shape = Shape(asteroid_points)\n",
     "\n",
     "    component_manager.add_component(asteroid, asteroid_game_object)\n",
+    "    component_manager.add_component(asteroid, asteroid_has_key_frame)\n",
     "    component_manager.add_component(asteroid, asteroid_transform)\n",
     "    component_manager.add_component(asteroid, asteroid_position)\n",
     "    component_manager.add_component(asteroid, asteroid_rotation)\n",
@@ -516,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,15 +546,27 @@
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"Update the system with the given component manager\"\"\"\n",
     "\n",
-    "class EndFrameTickSystem(SystemABC):\n",
-    "    def __init__ (self, screen: pygame.Surface, clock: pygame.time.Clock):\n",
-    "        self.screen = screen\n",
-    "        self.clock = clock\n",
     "\n",
-    "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
-    "        \"\"\"limit fps at endframe tick and clear screen\"\"\"\n",
-    "        self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
-    "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
+    "class ShapeABC(ABC):\n",
+    "    \"\"\"\n",
+    "    Helper class for shape systems, contains static methods for :\n",
+    "    - rotating points\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @staticmethod\n",
+    "    @abstractmethod\n",
+    "    def _rotatePoints(\n",
+    "        points: List[Tuple[float, float]], angle: float\n",
+    "    ) -> List[Tuple[float, float]]:\n",
+    "        \"\"\"Rotate a list of points by a given angle, center is assumed to be (0,0)\"\"\"\n",
+    "        angle_rad = math.radians(angle)\n",
+    "        rotated_points = []\n",
+    "        for point in points:\n",
+    "            x, y = point\n",
+    "            new_x = x * math.cos(angle_rad) - y * math.sin(angle_rad)\n",
+    "            new_y = x * math.sin(angle_rad) + y * math.cos(angle_rad)\n",
+    "            rotated_points.append((new_x, new_y))\n",
+    "        return rotated_points\n"
    ]
   },
   {
@@ -547,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,20 +677,12 @@
     "            p.position = PositioningSystem._screen_wrap(forward_position)\n",
     "\n",
     "\n",
-    "class RotationalSystem(SystemABC):\n",
+    "class RotationalSystem(SystemABC, ShapeABC):\n",
     "    @staticmethod\n",
     "    def _rotatePoints(\n",
     "        points: List[Tuple[float, float]], angle: float\n",
     "    ) -> List[Tuple[float, float]]:\n",
-    "        \"\"\"Rotate a list of points by a given angle, center is assumed to be (0,0)\"\"\"\n",
-    "        angle_rad = math.radians(angle)\n",
-    "        rotated_points = []\n",
-    "        for point in points:\n",
-    "            x, y = point\n",
-    "            new_x = x * math.cos(angle_rad) - y * math.sin(angle_rad)\n",
-    "            new_y = x * math.sin(angle_rad) + y * math.cos(angle_rad)\n",
-    "            rotated_points.append((new_x, new_y))\n",
-    "        return rotated_points\n",
+    "        return ShapeABC._rotatePoints(points, angle)\n",
     "\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
     "        \"\"\"Rotate entities with a rotation component\"\"\"\n",
@@ -678,12 +702,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Render Graphics**"
+    "##### **Apply Animations**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AnimateAsteroidsSystem(SystemABC):\n",
+    "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
+    "        \"\"\"Animate asteroids\"\"\"\n",
+    "        super().update(cm, **kwargs)\n",
+    "        entities = cm.get_entities_with_all_components(\n",
+    "            [Asteroid, HasKeyFrame, Transform]\n",
+    "        )\n",
+    "        for entity in entities:\n",
+    "            xform = cm.get_component(entity, Transform)\n",
+    "            animation = cm.get_component(entity, HasKeyFrame)\n",
+    "            # tick == current angle\n",
+    "            # value == angle increment\n",
+    "            # modulus 360 to keep angle in range\n",
+    "            angle_increment = animation.key_frame.value\n",
+    "            update_angle = (animation.key_frame.tick + angle_increment) % 360\n",
+    "            animation.key_frame = KeyFrame(update_angle, angle_increment)\n",
+    "            xform.rotation = update_angle\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Draw Shapes**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,11 +751,8 @@
     "        self.clock = clock\n",
     "\n",
     "    def update(self, cm: ComponentManager) -> None:\n",
-    "        self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
-    "\n",
     "        # get entities with POSITION (where) AND SHAPE (what) to render\n",
     "        entities = cm.get_entities_with_all_components([Shape, Position])\n",
-    "        # rotated_image = pygame.transform.rotate(self.image, self.rotation)\n",
     "        # Render all entities with a position and points component\n",
     "        for entity in entities:\n",
     "            p = cm.get_component(entity, Position)\n",
@@ -709,7 +763,7 @@
     "                (255, 255, 255),\n",
     "                [(x + px, y + py) for px, py in shape.points_render],\n",
     "                1,\n",
-    "            )"
+    "            )\n"
    ]
   },
   {
@@ -717,17 +771,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **UI and Text**"
+    "##### **UI and Text Blit**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TextBlitSystem(SystemABC):\n",
-    "    def __init__(self, screen: pygame.Surface, position: Tuple[int, int], font_size=24, color = (255, 255, 255)):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        screen: pygame.Surface,\n",
+    "        position: Tuple[int, int],\n",
+    "        font_size=24,\n",
+    "        color=(255, 255, 255),\n",
+    "    ):\n",
     "        \"\"\"Draw text to surface at given position\"\"\"\n",
     "        self.screen = screen\n",
     "        self.position = position\n",
@@ -736,7 +796,32 @@
     "\n",
     "    def update(self, cm: ComponentManager, message: str, **kwargs) -> None:\n",
     "        text_surface = self.font.render(message, True, self.color)\n",
-    "        self.screen.blit(text_surface, self.position)"
+    "        self.screen.blit(text_surface, self.position)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **End Frame Tick**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EndFrameTickSystem(SystemABC):\n",
+    "    def __init__(self, screen: pygame.Surface, clock: pygame.time.Clock):\n",
+    "        self.screen = screen\n",
+    "        self.clock = clock\n",
+    "\n",
+    "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
+    "        \"\"\"limit fps at endframe tick and clear screen\"\"\"\n",
+    "        self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
+    "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
    ]
   },
   {
@@ -750,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,6 +846,7 @@
     "    input_system = InputSystem()\n",
     "    positioning_system = PositioningSystem()\n",
     "    rotational_system = RotationalSystem()\n",
+    "    animate_asteroids_system = AnimateAsteroidsSystem()\n",
     "    shape_draw_system = ShapeDrawSystem(context_sys.screen, context_sys.clock)\n",
     "    text_blit_system_fps = TextBlitSystem(context_sys.screen, (280, 430))\n",
     "    text_blit_system_event = TextBlitSystem(context_sys.screen, (10, 450), 18)\n",
@@ -812,6 +898,8 @@
     "            positioning_system.update(component_manager)\n",
     "            # Update rotation\n",
     "            rotational_system.update(component_manager)\n",
+    "            # Apply animations\n",
+    "            animate_asteroids_system.update(component_manager)\n",
     "            # Draw shapes\n",
     "            shape_draw_system.update(component_manager)\n",
     "            # Blit text\n",
